[ios] Fix overscroll target for NTP.

Bug: 859440
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I28b4542d8752d3c8ee52f62aa2894dabf787a0d7
Reviewed-on: https://chromium-review.googlesource.com/1139606
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575606}
Former-commit-id: fa0007b289fa6da0cd6b0b5f173fbac8ebcbd2bb